@@ -41,8 +41,13 @@ void wml_exception(
 		, const std::string& dev_message)
 {
 	std::ostringstream sstr;
-	sstr << "Condition '" << cond << "' failed at "
-		<< file << ":" << line << " in function '" << function << "'.";
+	if(cond) {
+		sstr << "Condition '" << cond << "' failed at ";
+	} else {
+		sstr << "Unconditional failure at ";
+	}
+
+	sstr << file << ":" << line << " in function '" << function << "'.";
 
 	if(!dev_message.empty()) {
 		sstr << " Extra development information: " << dev_message;
