@@ -285,6 +285,7 @@ Version 1.11.0-svn:
    * Fixed: grids now recursively search for widgets by pointer.
    * Fixed: Wrong current side number after side turns (bug #19735)
      It also affected the lua field wesnoth.current.side
+   * Added: Fail macros FAIL and FAIL_WITH_DEV_MESSAGE.
 
 Version 1.10.0:
  * Campaigns:
